--- a/industry/templates/industry/layouts/initial_information.html
+++ b/industry/templates/industry/layouts/initial_information.html
@@ -24,12 +24,12 @@
                                 <div class="col-md-3"></div>
                                 <div class="col-md-5">
                                     <div class="form-group">
-                                        <label for="id_RandDname" class="RandD__form-item">نام شرکت</label>
                                         <div class='RandD__form-item'>
+                                        <label for="id_RandDname" class="RandD__form-item">نام شرکت</label>
                                             {% if RandD_form.RandDname.errors %}
-                                                {% render_field RandD_form.RandDname class+="w-100 error" %}
+                                                {% render_field RandD_form.RandDname class+="w-100 error" id="id_RandDname" %}
                                             {% else %}
-                                                {% render_field RandD_form.RandDname class+="w-100" %}
+                                                {% render_field RandD_form.RandDname class+="w-100" id="id_RandDname" %}
                                             {% endif %}
                                             <div class="error">
                                                 {% render_field RandD_form.RandDname.errors %}
@@ -38,7 +38,7 @@
                                     </div>
                                     <div class="form-group RandD__form-item">
                                         <label for="id_registration_number">شماره ثبت</label>
-                                        {% if RandD_form.fullname.errors %}
+                                        {% if RandD_form.registration_number.errors %}
                                             {% render_field RandD_form.registration_number class+="w-100 error" %}
                                         {% else %}
                                             {% render_field RandD_form.registration_number class+="w-100" %}
