--- a/expert/templates/expert/project.html
+++ b/expert/templates/expert/project.html
@@ -303,8 +303,8 @@
                                                             {% else %}
                                                                 <img src="{% static 'img/empty-tray.svg' %}"
                                                                      alt="no researcher" height="100px" class="rounded-0">
-                                                                <h5>پژوهشگری برای این پروژه ثبت نشده است!</h5>
-                                                                <p>می توانید به کمک دکمه درخواست پژوهشگر تعبیه شده درخواست خود را ثبت کنید.</p>
+                                                                <h6>پژوهشگری برای این پروژه ثبت نشده است!</h6>
+                                                                <pre>می توانید به کمک دکمه درخواست پژوهشگر تعبیه شده درخواست خود را ثبت کنید.</pre>
                                                             {% endif %}
                                                         </div>
                                                     </div>
