--- a/expert/templates/expert/layouts/researcher_request.html
+++ b/expert/templates/expert/layouts/researcher_request.html
@@ -29,7 +29,7 @@
                                            hidden>
                                 </label>
                                 <div class="col-6">
-                                    <div class="form-group">
+                                    <div class="form-group num-input-control">
                                         <div class="input-group-prepend">
                                             <span class="input-group-text"> - </span>
                                         </div>
@@ -41,7 +41,7 @@
                                     </div>
                                 </div>
                                 <div class="col-6">
-                                    <div class="form-group">
+                                    <div class="form-group num-input-control">
                                         <div class="input-group-prepend">
                                             <span class="input-group-text"> - </span>
                                         </div>
