resolve some bugs #3

--- a/expert/templates/expert/layouts/add_new_question.html
+++ b/expert/templates/expert/layouts/add_new_question.html
@@ -43,7 +43,7 @@
                                 <div class="info-text warning">
                                     <span class="star warning"></span>
                                     <p class="text-right">
-                                        در صورتی که بیش از یک فایل برای باگذاری مدّ نظر دارید، لطفا آن‌ها را به صورت یک فایل zip و یا rar بسته‌بندی کرده و بارگذاری نمایید.
+                                        در صورتی که بیش از یک فایل برای بارگذاری مدّ نظر دارید، لطفا آن‌ها را به صورت یک فایل zip و یا rar بسته‌بندی کرده و بارگذاری نمایید.
                                     </p>
                                 </div>
                             </div>
