--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4840,7 +4840,7 @@ img.center-head {
 }
 
 .num-input-control input {
-    padding: 10px 45px;
+    /*padding: 10px 45px;*/
     width: 100%;
 }
 
