--- a/expert/templates/expert/layouts/researcher_info_dialog.html
+++ b/expert/templates/expert/layouts/researcher_info_dialog.html
@@ -4,7 +4,7 @@
     <div class="modal-dialog modal-lg modal-resume">
         <div class="modal-content">
             <div class="modal-header">
-                <h6 class="modal-title text-right" id="researcherInfoLabel">رزومه پژوهشگر</h6>
+                <h6 class="modal-title text-right default" id="researcherInfoLabel">رزومه پژوهشگر</h6>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
