--- a/expert/templates/expert/layouts/researcher_request.html
+++ b/expert/templates/expert/layouts/researcher_request.html
@@ -30,26 +30,26 @@
                                 </label>
                                 <div class="col-6">
                                     <div class="form-group num-input-control">
-                                        <div class="input-group-prepend">
-                                            <span class="input-group-text"> - </span>
-                                        </div>
+{#                                        <div class="input-group-prepend">#}
+{#                                            <span class="input-group-text"> - </span>#}
+{#                                        </div>#}
                                         <label for="id_researcher_count">حداکثر تعداد:</label>
                                         {{ requestResearcherForm.researcher_count }}
-                                        <div class="input-group-append">
-                                            <span class="input-group-text">+</span>
-                                        </div>
+{#                                        <div class="input-group-append">#}
+{#                                            <span class="input-group-text">+</span>#}
+{#                                        </div>#}
                                     </div>
                                 </div>
                                 <div class="col-6">
                                     <div class="form-group num-input-control">
-                                        <div class="input-group-prepend">
-                                            <span class="input-group-text"> - </span>
-                                        </div>
+{#                                        <div class="input-group-prepend">#}
+{#                                            <span class="input-group-text"> - </span>#}
+{#                                        </div>#}
                                         <label for="id_least_hour"> ساعت کار(ساعت):</label>
                                         {{ requestResearcherForm.least_hour }}
-                                        <div class="input-group-append">
-                                            <span class="input-group-text">+</span>
-                                        </div>
+{#                                        <div class="input-group-append">#}
+{#                                            <span class="input-group-text">+</span>#}
+{#                                        </div>#}
                                     </div>
                                 </div>
                             </div>
