--- a/industry/templates/industry/preview_project.html
+++ b/industry/templates/industry/preview_project.html
@@ -286,7 +286,7 @@
                                                                                      alt="{{ researcher.fullname }}پروفایل ">
                                                                                 <div class="info">
                                                                                     <h3>{{ researcher.fullname }}</h3>
-                                                                                    <button value="{{ project.pk }}"
+                                                                                    <button value="{{ project_pk }}"
                                                                                             id="{{ researcher.id }}"
                                                                                             data-url="{% url 'researcher:show_resume_preview' %}"
                                                                                             data-toggle="modal"
