--- a/industry/templates/industry/preview_project.html
+++ b/industry/templates/industry/preview_project.html
@@ -315,7 +315,7 @@
                             </div>
                         </div>
                         <div class="col-12">
-                            {% include 'industry/layouts/comment.html' with comments=comments project_pk=project_pk %}
+                            {% include 'industry/layouts/comment.html' with comments=comments project_pk=project_pk expert_pk=expert_pk %}
                         </div>
                     </div>
                 </div>
