--- a/expert/templates/expert/userInfo.html
+++ b/expert/templates/expert/userInfo.html
@@ -629,43 +629,49 @@
                                 <div class="row">
                                     <div class="col-lg-12 text-right">
                                         <div class="mt-2">
-                                            <p class="font-weight-norma">
+                                            <p class="font-weight-normal">
                                                 در این قسمت شما می توانید رزومه خود را بارگذاری کنید.
                                             </p>
                                             <div class="row">
                                                 <div class="col-md-2"></div>
                                                 <div class="col-md-8 text-center attach__container">
-                                                    <div class="form-group text-center font-weight-bold">
-                                                        <label class="upload-dash-box" for="uploadResume">
-                                                            <svg width="1em" height="1em" viewBox="0 0 16 16"
-                                                                 class="bi bi-cloud" fill="currentColor"
-                                                                 xmlns="http://www.w3.org/2000/svg"
-                                                                 style="font-size: 30px">
-                                                                <path d="M4.406 3.342A5.53 5.53 0 0 1 8 2c2.69 0 4.923 2 5.166 4.579C14.758 6.804 16 8.137 16 9.773 16 11.569 14.502 13 12.687 13H3.781C1.708 13 0 11.366 0 9.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383zm.653.757c-.757.653-1.153 1.44-1.153 2.056v.448l-.445.049C2.064 6.805 1 7.952 1 9.318 1 10.785 2.23 12 3.781 12h8.906C13.98 12 15 10.988 15 9.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 4.825 10.328 3 8 3a4.53 4.53 0 0 0-2.941 1.1z"
-                                                                      fill-rule="evenodd"></path>
-                                                            </svg>
-                                                            انتخاب فایل
-                                                        </label>
-                                                        <input type="file" class="form-control-file"
-                                                               id="uploadResume" name="resume" hidden>
-                                                    </div>
-                                                    {#                                                    <div class="attach-box m-auto">#}
-                                                    {#                                                        <span class="attach-box__img pdf"></span>#}
-                                                    {#                                                        <span class="attach-box__info">#}
-                                                    {#                                                            <span class="attach-box__info-name">#}
-                                                    {#                                                                Capture#}
-                                                    {#                                                            </span>#}
-                                                    {#                                                            <span class="attach-box__info-ext">#}
-                                                    {#                                                                PNG#}
-                                                    {#                                                            </span>#}
-                                                    {#                                                        </span>#}
-                                                    {#                                                        <span class="attach-box__option">#}
-                                                    {#                                                           <a class="attach-box__option-download" href="#">#}
-                                                    {#                                                               <i class="fas fa-download"></i>#}
-                                                    {#                                                           </a>#}
-                                                    {#                                                        </span>#}
-                                                    {#                                                    </div>#}
-                                                    {#                                                    <button class="btn btn-primary mt-4" type="button" id="changeAttachment">تغییر فایل</button>#}
+                                                    {% if resume %}
+                                                        <div class="attach-box m-auto">
+                                                            <span class="attach-box__img {{ expert_form.get_resume_icon }}"></span>
+                                                            <span class="attach-box__info">
+                                                                <span class="attach-box__info-name">
+                                                                    {{ expert_form.get_resume_name }}
+                                                                </span>
+                                                                <span class="attach-box__info-ext">
+                                                                    {{ expert_form.get_resume_ext|upper }}
+                                                                </span>
+                                                            </span>
+                                                            <span class="attach-box__option">
+                                                                <a class="attach-box__option-download"
+                                                                   href="{{ expert_form.resume.url }}">
+                                                                    <i class="fas fa-download"></i>
+                                                                </a>
+                                                            </span>
+                                                        </div>
+                                                        <button class="btn btn-primary mt-4" type="button"
+                                                                id="changeAttachment">حذف فایل
+                                                        </button>
+                                                    {% else %}
+                                                        <div class="form-group text-center font-weight-bold">
+                                                            <label class="upload-dash-box" for="uploadResume">
+                                                                <svg width="1em" height="1em" viewBox="0 0 16 16"
+                                                                     class="bi bi-cloud" fill="currentColor"
+                                                                     xmlns="http://www.w3.org/2000/svg"
+                                                                     style="font-size: 30px">
+                                                                    <path d="M4.406 3.342A5.53 5.53 0 0 1 8 2c2.69 0 4.923 2 5.166 4.579C14.758 6.804 16 8.137 16 9.773 16 11.569 14.502 13 12.687 13H3.781C1.708 13 0 11.366 0 9.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383zm.653.757c-.757.653-1.153 1.44-1.153 2.056v.448l-.445.049C2.064 6.805 1 7.952 1 9.318 1 10.785 2.23 12 3.781 12h8.906C13.98 12 15 10.988 15 9.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 4.825 10.328 3 8 3a4.53 4.53 0 0 0-2.941 1.1z"
+                                                                          fill-rule="evenodd"></path>
+                                                                </svg>
+                                                                انتخاب فایل
+                                                            </label>
+                                                            <input type="file" class="form-control-file"
+                                                                   id="uploadResume" name="resume" hidden>
+                                                        </div>
+                                                    {% endif %}
                                                 </div>
                                             </div>
                                         </div>
