change feedback model success message

--- a/expert/templates/expert/userInfo.html
+++ b/expert/templates/expert/userInfo.html
@@ -685,23 +685,24 @@
                             <div class="box-body">
                                 <div class="row">
                                     <div class="col-lg-12 text-right">
-                                        <div class="form-group form-check">
+                                        <div class="form-group form-check mb-0">
                                             <input type="checkbox" class="form-check-input inp-cbx" id="autoAddProject"
                                                    name="autoAddProject" value=1 hidden
                                                    {% if autoAddProject %}checked{% endif %}>
-                                            <label class="form-check-label cbx" for="autoAddProject">
-                                        <span>
-                                            <svg class="inline-svg bi bi-check2" viewBox="0 0 16 16"
-                                                 xmlns="http://www.w3.org/2000/svg">
-                                                <path fill-rule="evenodd"
-                                                      d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"></path>
-                                            </svg>
-                                        </span>
+                                            <label class="form-check-label cbx mb-0" for="autoAddProject">
+                                                <span class="mt-2">
+                                                    <svg class="inline-svg bi bi-check2" viewBox="0 0 16 16"
+                                                        xmlns="http://www.w3.org/2000/svg">
+                                                        <path fill-rule="evenodd"
+                                                              d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"></path>
+                                                    </svg>
+                                                </span>
                                                 <span>
-                                            قبل از این که مجموعه
-                                        پژوهشی‌ای بخواهد من را به پروژه‌ای اضافه کند، از من اجازه گرفته
-                                        شود
-                                        </span>
+                                                    <h6>اجازه اضافه شدن به پروژه</h6>
+                                                    قبل از این که یک مجموعه
+                                                    پژوهشی‌ بخواهد من را به پروژه‌ای اضافه کند، از من اجازه گرفته
+                                                    شود
+                                                </span>
                                             </label>
                                         </div>
                                     </div>
