show no answer to expert question

--- a/expert/templates/expert/layouts/show_question.html
+++ b/expert/templates/expert/layouts/show_question.html
@@ -49,7 +49,13 @@
                             <span class="section-title">پاسخ ها</span>
                             <button class="default-btn close-answer">بستن پاسخ جدید</button>
                             <div class="section">
-                                <div class="row all-answers"></div>
+                                <div class="no-comment">
+                                    <img src="{% static 'img/hourglass.svg' %}" alt="no message">
+                                    <h6 dir="rtl">لطفا شکیبا باشید!</h6>
+                                    <pre>تاکنون پاسخی به این سوال داده نشده است.</pre>
+                                </div>
+                                <div class="row all-answers">
+                                </div>
                             </div>
                         </div>
                     </div>
